syntax = "proto3";
package pulse.cpm.bind;
option java_package = "pulse.cpm.bind";
option csharp_namespace = "pulse.cpm.bind";
option optimize_for = SPEED;

import "pulse/cdm/bind/Scenario.proto";
import "pulse/cpm/bind/PulseConfiguration.proto";

message ScenarioData
{
  pulse.cdm.bind.ScenarioData             Scenario           = 1;
  ConfigurationData                       Configuration      = 2;
}